ajustando fundo e alinhamento

--- a/exercicios/ex22/fundo006.html
+++ b/exercicios/ex22/fundo006.html
@@ -8,16 +8,22 @@
     <style>
         body {
             height: 98vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shorthand - background color > position > [size] > attachment */
+
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +35,7 @@
 <body>
     <main>
         <h1>Teste de Imagens de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni nihil repudiandae dolorem blanditiis debitis aliquam cum, iure earum aut ratione consequuntur nulla quos enim, aperiam iusto nam quasi soluta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsam earum explicabo enim pariatur reprehenderit eveniet omnis, animi dolorem in quibusdam voluptas consequatur labore beatae laudantium maxime repellat neque natus!Lorem</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni nihil repudiandae dolorem blanditiis debitis aliquam cum, iure earum aut ratione consequuntur nulla quos enim, aperiam iusto nam quasi soluta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsam earum explicabo enim pariatur reprehenderit eveniet omnis, animi dolorem in quibusdam voluptas consequatur labore beatae laudantium maxime repellat neque natus!Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos debitis voluptate, amet ad, ex repellat laudantium consequatur aliquam, pariatur perspiciatis reprehenderit tempora. Maxime enim ut necessitatibus nostrum sint consequuntur aut?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus laboriosam nobis perspiciatis, aut pariatur eos vitae harum in quod excepturi cum sunt reiciendis provident nemo. Quos tempora vel voluptatum beatae.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero vitae quos cupiditate vel, voluptatum aut eveniet dolor, ratione numquam unde itaque asperiores sed velit enim porro quae saepe aperiam veritatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias placeat, laborum repellat similique a distinctio cumque maiores sequi delectus! Eligendi facere repellendus hic commodi voluptate pariatur quae vitae culpa modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni nihil repudiandae dolorem blanditiis debitis aliquam cum, iure earum aut ratione consequuntur nulla quos enim, aperiam iusto nam quasi soluta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsam earum explicabo enim pariatur reprehenderit eveniet omnis, animi dolorem in quibusdam voluptas consequatur labore beatae laudantium maxime repellat neque natus!Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos debitis voluptate, amet ad, ex repellat laudantium consequatur aliquam, pariatur perspiciatis reprehenderit tempora. Maxime enim ut necessitatibus nostrum sint consequuntur aut?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus laboriosam nobis perspiciatis, aut pariatur eos vitae harum in quod excepturi cum sunt reiciendis provident nemo. Quos tempora vel voluptatum beatae.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero vitae quos cupiditate vel, voluptatum aut eveniet dolor, ratione numquam unde itaque asperiores sed velit enim porro quae saepe aperiam veritatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias placeat, laborum repellat similique a distinctio cumque maiores sequi delectus! Eligendi facere repellendus hic commodi voluptate pariatur quae vitae culpa modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni nihil repudiandae dolorem blanditiis debitis aliquam cum, iure earum aut ratione consequuntur nulla quos enim, aperiam iusto nam quasi soluta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsam earum explicabo enim pariatur reprehenderit eveniet omnis, animi dolorem in quibusdam voluptas consequatur labore beatae laudantium maxime repellat neque natus!Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos debitis voluptate, amet ad, ex repellat laudantium consequatur aliquam, pariatur perspiciatis reprehenderit tempora. Maxime enim ut necessitatibus nostrum sint consequuntur aut?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus laboriosam nobis perspiciatis, aut pariatur eos vitae harum in quod excepturi cum sunt reiciendis provident nemo. Quos tempora vel voluptatum beatae.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero vitae quos cupiditate vel, voluptatum aut eveniet dolor, ratione numquam unde itaque asperiores sed velit enim porro quae saepe aperiam veritatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias placeat, laborum repellat similique a distinctio cumque maiores sequi delectus! Eligendi facere repellendus hic commodi voluptate pariatur quae vitae culpa modi!</p>
     </main>
 </body>
 </html>
