add img em iframe003

--- a/exercicios/ex24/iframe003.html
+++ b/exercicios/ex24/iframe003.html
@@ -30,7 +30,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aperiam ad in dignissimos esse beatae, ullam fugit adipisci et eligendi? Deleniti incidunt saepe possimus? Optio harum sequi quidem id temporibus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, tenetur itaque deserunt perferendis sapiente nesciunt reprehenderit harum, hic fugit laboriosam dolore quibusdam rem adipisci commodi eaque possimus corporis ex fuga.</p>
 
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha umas das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nobis optio aut nihil eum. Unde adipisci commodi pariatur iure! Unde voluptas rerum ducimus tempora animi quos maiores sint illum modi?</p>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha umas das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nobis optio aut nihil eum. Unde adipisci commodi pariatur iure! Unde voluptas rerum ducimus tempora animi quos maiores sint illum modi?</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compativel com isso</p>
     </iframe>
 
