--- a/exercicios/ex25/form009.html
+++ b/exercicios/ex25/form009.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
 
         <p>
             <label for="inum">Número: </label>
